2004-11-04  Alan Modra  <amodra@bigpond.net.au>

	* emultempl/ppc64elf.em (no_tls_opt): Rename from notlsopt.
	(no_opd_opt, no_toc_opt): New static vars.
	(ppc_before_allocation): Don't edit opt if no_opd_opt.  Call
	ppc64_elf_edit_toc.
	(OPTION_NO_OPD_OPT, OPTION_NO_TOC_OPT): Define.
	(PARSE_AND_LIST_LONGOPTS): Add no-opd-optimize and no-toc-optimize.
	(PARSE_AND_LIST_OPTIONS): Describe new options.
	(PARSE_AND_LIST_ARGS_CASES): Handle them.

2004-10-27  Nick Clifton  <nickc@redhat.com>

	* emultempl/alphaelf.em (alpha_after_parse): Add extra, NULL,
	parameter to invocation of lang_section_start.
	* emultempl/aix.em (_handle_option): Likewise.

	* Makefile.am (eelf64alpha.c, eelf64alpha_fbsd.c,
	eelf64alpha_nbsd.c): Add dependency upon emultempl/alphaelf.em.
	* Makefile.in: Regenerate.

2004-10-26  Mark Mitchell  <mark@codesourcery.com>

	* emulparams/armelf.sh (OTHER_READONLY_SECTIONS): Do not emit
	__exidx_{start,end} when not relocating.

2004-10-25  Mark Mitchell  <mark@codesourcery.com>

	* Makefile.in (earmsymbian.c): Depend on armbpabi.sc, not elf.sc.
	* ldexp.h (segment_type): New type.
	(segments): New variable.
	* ldexp.c (segments): New variable.
	(exp_print_token): Handle SEGMENT_START.
	(fold_binary): Likewise.
	* ldgram.y (SEGMENT_START): Declare it as a token.
	(exp): Handle SEGMENT_START.
	* ldlang.h (lang_address_statement_type): Add segment field.
	(lang_section_start): Change prototype.
	* ldlang.c (map_input_to_output_sections): Do not process section
	assignments if a corresponding SEGMENT_START has already been
	seen.
	(lang_section_start): Add segment parameter.
	* ldlex.l (SEGMENT_START): Add it.
	* lexsup.c (seg_segment_start): New function.
	(parse_args): Use it for -Tbss, -Tdata, and -Ttext.
	* ld.texinfo (SEGMENT_START): Document it.
	* emulparams/armsymbian.sh (EMBEDDED): Set it.
	* scripttempl/armbpabi.sc: Use SEGMENT_START to control segment
	base addresses.  Do not map relocations.
	* NEWS: Mention SEGMENT_START.
